# unknown-server

./: .gitignore  Cargo.toml  docker-compose.yaml  example.env  mise.toml
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md
garage/: garage.toml
migrations/: 0001_init.up.sql
requests/: auth.http
src/: config.rs  main.rs  prelude.rs  state.rs
src/dto/: auth.rs  shared.rs
src/routes/: auth.rs  mod.rs
unknown-actor/: Cargo.toml
unknown-actor/src/: actor.rs  behaviour.rs  lib.rs  main.rs  message.rs  pool.rs
unknown-server/: Cargo.toml  build.rs  mise.toml
unknown-server/assets/assets/: style.css
unknown-server/assets/assets/js/: .gitignore
unknown-server/migrations/: 0001_init.down.sql
unknown-server/src/: config.rs  error.rs  main.rs  prelude.rs  state.rs  user.rs
unknown-server/src/dto/: auth.rs
unknown-server/src/models/: user.rs
unknown-server/src/routes/: auth.rs  mod.rs  upload.rs
unknown-server/templates/: base.j2.html
unknown-server/templates/auth/: index.j2.html  login.j2.html  signup.j2.html
unknown-web/: .parcelrc  .postcssrc  mise.toml  package.json  pnpm-lock.yaml  tailwind.config.js
unknown-web/mise-tasks/: clean.sh
unknown-web/src/: index.html
unknown-web/src/components/: head.html  navbar.html
unknown-web/src/css/: app.css  auth.css
unknown-web/src/js/: app.js
unknown-web/src/pages/: index.html
unknown-web/src/pages/auth/: login.html  loginnx.html  signup.html  signupnx.html
unknown-web/src/pages/test/: post1.html
